--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Flask cache / instance folder / logs
+instance/
+*.log
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+
+# Environment variables
 .env
+.env.*
+
+# Virtualenv
+venv/
+ENV/
+env/
+.venv/
+.ENV/
+
+# IDE files
+.vscode/
+.idea/
+
+# MacOS
+.DS_Store
+
+# Python egg info
+*.egg-info/
+dist/
+build/
+
+# SQLite databases
+*.sqlite3
+
+# VSCode debug history
+.history/
+node_modules/
