--- a/pantryai-backend/requirements.txt
+++ b/pantryai-backend/requirements.txt
@@ -9,3 +9,4 @@ google-generativeai # Changed to get the latest compatible version
 gunicorn>=20.0
 Flask-Cors>=3.0.10
 requests>=2.28.1
+aiohttp==3.9.1
