--- a/pantryai-frontend/ios/Pantry.xcodeproj/xcshareddata/xcschemes/Pantry.xcscheme
+++ b/pantryai-frontend/ios/Pantry.xcodeproj/xcshareddata/xcschemes/Pantry.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "pantryaifrontend.app"
-               BlueprintName = "pantryaifrontend"
-               ReferencedContainer = "container:pantryaifrontend.xcodeproj">
+               BuildableName = "Pantry.app"
+               BlueprintName = "Pantry"
+               ReferencedContainer = "container:Pantry.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "pantryaifrontendTests.xctest"
-               BlueprintName = "pantryaifrontendTests"
-               ReferencedContainer = "container:pantryaifrontend.xcodeproj">
+               BuildableName = "PantryTests.xctest"
+               BlueprintName = "PantryTests"
+               ReferencedContainer = "container:Pantry.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "pantryaifrontend.app"
-            BlueprintName = "pantryaifrontend"
-            ReferencedContainer = "container:pantryaifrontend.xcodeproj">
+            BuildableName = "Pantry.app"
+            BlueprintName = "Pantry"
+            ReferencedContainer = "container:Pantry.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "pantryaifrontend.app"
-            BlueprintName = "pantryaifrontend"
-            ReferencedContainer = "container:pantryaifrontend.xcodeproj">
+            BuildableName = "Pantry.app"
+            BlueprintName = "Pantry"
+            ReferencedContainer = "container:Pantry.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
